feat: able to add, delete and list VM Template
