# tides-server/pkg/restapi/operations/vmtemp/add_vm_temp_parameters.go
@@ -1,0 +1,75 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package vmtemp
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/validate"
+)
+
+// NewAddVMTempParams creates a new AddVMTempParams object
+//
+// There are no default values defined in the spec.
+func NewAddVMTempParams() AddVMTempParams {
+
+	return AddVMTempParams{}
+}
+
+// AddVMTempParams contains all the bound params for the add VM temp operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters addVMTemp
+type AddVMTempParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*
+	  In: body
+	*/
+	ReqBody AddVMTempBody
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewAddVMTempParams() beforehand.
+func (o *AddVMTempParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer r.Body.Close()
+		var body AddVMTempBody
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			res = append(res, errors.NewParseError("reqBody", "body", "", err))
+		} else {
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			ctx := validate.WithOperationRequest(context.Background())
+			if err := body.ContextValidate(ctx, route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.ReqBody = body
+			}
+		}
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
