# tides-server/swagger/swagger.yml
@@ -1660,6 +1660,116 @@ paths:
             properties:
               message:
                 type: string
+  /vmtemp:
+    post:
+      operationId: 'addVMTemp'
+      description: 'add VMTemp'
+      tags:
+        - 'vmtemp'
+      consumes:
+        - 'application/json'
+      parameters:
+        - in: body
+          name: reqBody
+          schema:
+            type: object
+            properties:
+              name:
+                type: string
+              vcpu:
+                type: integer
+              vmem:
+                type: integer
+              disk:
+                type: integer
+              templateID:
+                type: integer
+      responses:
+        200:
+          description: 'OK'
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+              id:
+                type: integer
+        400:
+          description: 'bad request'
+        401:
+          description: 'Unauthorized'
+        404:
+          description: 'resource not found'
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+  /template/vmtemp/{id}:
+    get:
+      operationId: 'listVMTemp'
+      description: 'list VMtemplate'
+      tags:
+        - 'vmtemp'
+      produces:
+        - 'application/json'
+      parameters:
+        - type: integer
+          in: path
+          name: id
+          required: true
+      responses:
+        200:
+          description: 'OK'
+          schema:
+            type: array
+            items:
+              type: object
+              properties:
+                id:
+                  type: integer
+                name:
+                  type: string
+                vcpu:
+                  type: integer
+                vmem:
+                  type: integer
+                disk:
+                  type: integer
+        401:
+          description: 'Unauthorized'
+  /vmtemp/{id}:
+    delete:
+      operationId: 'deleteVMTemp'
+      description: 'delete VMTemplate'
+      tags:
+        - 'vmtemp'
+      produces:
+        - 'application/json'
+      parameters:
+        - type: integer
+          in: path
+          name: id
+          required: true
+      responses:
+        200:
+          description: 'deletion success'
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+        401:
+          description: 'Unauthorized'
+        403:
+          description: 'Forbidden'
+        404:
+          description: 'resource not found'
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
 
 definitions:
   ResourceAddItem:
